--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,17 +10,25 @@
 <p>Phone: +1 (201) 887-5323</p>
 <p>Email: shubhamyeole.cs@gmail.com</p>
 </div>
-<div id="header">
+<div id="footer" class="header">
 <ul>
-  <li><a class="upload" href="#home">Upload Resume</a></li>
-  <li><a href="#allresume" class="allresume">Filter Resume</a></li>
-  <li><a href="http://shubham-great-livings.herokuapp.com/" target="_blank">My Real Estate</a></li>
-  <li><a href="https://java-nodejs-blog.herokuapp.com/" target="_blank">My Blog</a></li>
-  <li><a href="https://shubhamtwilio.herokuapp.com/" target="_blank">My Twilio Project</a></li>
-  <li><a href="https://github.com/shubham20yeole/AmazonWebService-AWS-S3Bucket" target="_blank">AWS S3 Bucket Project</a></li>
-  <li><a href="https://github.com/shubham20yeole/IVR-HelpDeskProject" target="_blank">IVR-HelpDeskProject</a></li>
+  <li><a class="admin" href="#admin">ADMIN</a></li>
+  <li><a class="upload" href="#home">UPLOAD RESUME</a></li>
+  <li><a href="#allresume" class="allresume">FILTER RESUME</a></li>
+  <li><a href="https://github.com/shubham20yeole?tab=repositories" target="_blank"><i class="fa fa-github"></i></a></li>
+  <li><a href="https://www.facebook.com/sy06736n" target="_blank"><i class="fa fa-facebook"></i></a></li>
+  <li><a href="https://www.linkedin.com/in/shubhamyeole" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+  <li><a href="#"> | </a></li>
+  <li><a href="https://shubhamtwilio.herokuapp.com/" target="_blank">TWILIO</a></li>
+  <li><a href="http://shubham-great-livings.herokuapp.com/" target="_blank">REAL ESTATE</a></li>
+  <li><a href="https://java-nodejs-blog.herokuapp.com/" target="_blank">BLOG</a></li>
+  <li><a href="https://github.com/shubham20yeole/IVR-HelpDeskProject" target="_blank">IVR</a></li>
+  <li><a href="https://github.com/shubham20yeole/AmazonWebService-AWS-S3Bucket" target="_blank">AWS</a></li>
+  <li><a href="#">MY PROJECTS <i class="fa fa-hand-o-right"></i></a></li>
 </ul>
 </div>
+
+
 <center>
 	<h1 id="message"><%=message%></h1>
 <div id="awsdivout">
@@ -108,6 +116,7 @@
 	
 </div>
 </div>
+<br><br><br><br><br><br>
 </center>
 
 <div class="footer" id="footer">
