--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,9 +43,8 @@
 		<input type="submit" name="submit" style="display: none;" id="finalsubmit" value="Submit Resume">
 	</form>
 	<input type="submit" name="submit" id="checkpdf" value="Submit Resume"></i>
-	<br><br>
+	<br><br><br><br><br><br>
 <div id="resultcount">TOTAL RESUME IN SYSTEM = <%=resumecount%></div>
-
 </div>
 
 <div id="admin-awsdivout">
@@ -106,14 +105,15 @@
 
 <button id="go" style="display: none;"><img src="/images/go.jpg" width="62" height="62"></button>
  <br><hr><br>
+
 <div id="resultcount">TOTAL RESUME IN SYSTEM = <%=resumecount%></div>
+<div id="load"></div>
 <div id="resumeappendout">
 	<table width='100%'>
 		<tr><td>Name</td><th>Email</th><th>Resume URL</th>
 		<th>Date</th><th>Approve Status</th><th>Action Status</th></tr>
 		<tbody id="resumeappend"></tbody>
 	</table>
-	
 </div>
 </div>
 <br><br><br><br><br><br>
