Update App.js file

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,13 +19,15 @@
   <li><a href="https://www.facebook.com/sy06736n" target="_blank"><i class="fa fa-facebook"></i></a></li>
   <li><a href="https://www.linkedin.com/in/shubhamyeole" target="_blank"><i class="fa fa-linkedin"></i></a></li>
   <li><a href="#"> | </a></li>
+  <li><a href="https://github.com/shubham20yeole/React.js_Cordova_App" target="_blank">CORDOVA + ANDROID + REACT.JS</a></li>
+  <li><a href="https://github.com/shubham20yeole/IVR-HelpDeskProject" target="_blank">IVR</a></li>
+  <li><a href="https://github.com/shubham20yeole/AmazonWebService-AWS-S3Bucket" target="_blank">AWS</a></li>
+  <li><a href="#"> | </i></a></li>
   <li><a href="http://shubham-great-livings.herokuapp.com/timetable" target="_blank">TASK TRACKER</a></li>
   <li><a href="https://shubhamtwilio.herokuapp.com/" target="_blank">TWILIO</a></li>
   <li><a href="http://shubham-great-livings.herokuapp.com/" target="_blank">REAL ESTATE</a></li>
   <li><a href="https://java-nodejs-blog.herokuapp.com/" target="_blank">BLOG</a></li>
-  <li><a href="https://github.com/shubham20yeole/IVR-HelpDeskProject" target="_blank">IVR</a></li>
-  <li><a href="https://github.com/shubham20yeole/AmazonWebService-AWS-S3Bucket" target="_blank">AWS</a></li>
-  <li><a href="#">MY PROJECTS <i class="fa fa-hand-o-right"></i></a></li>
+  <li><a href="#"> | </i></a></li>
 </ul>
 </div>
 
@@ -129,13 +131,15 @@
   <li><a href="https://www.facebook.com/sy06736n" target="_blank"><i class="fa fa-facebook"></i></a></li>
   <li><a href="https://www.linkedin.com/in/shubhamyeole" target="_blank"><i class="fa fa-linkedin"></i></a></li>
   <li><a href="#"> | </a></li>
+  <li><a href="https://github.com/shubham20yeole/React.js_Cordova_App" target="_blank">CORDOVA + ANDROID + REACT.JS</a></li>
+  <li><a href="https://github.com/shubham20yeole/IVR-HelpDeskProject" target="_blank">IVR</a></li>
+  <li><a href="https://github.com/shubham20yeole/AmazonWebService-AWS-S3Bucket" target="_blank">AWS</a></li>
+  <li><a href="#"> | </i></a></li>
   <li><a href="http://shubham-great-livings.herokuapp.com/timetable" target="_blank">TASK TRACKER</a></li>
   <li><a href="https://shubhamtwilio.herokuapp.com/" target="_blank">TWILIO</a></li>
   <li><a href="http://shubham-great-livings.herokuapp.com/" target="_blank">REAL ESTATE</a></li>
   <li><a href="https://java-nodejs-blog.herokuapp.com/" target="_blank">BLOG</a></li>
-  <li><a href="https://github.com/shubham20yeole/IVR-HelpDeskProject" target="_blank">IVR</a></li>
-  <li><a href="https://github.com/shubham20yeole/AmazonWebService-AWS-S3Bucket" target="_blank">AWS</a></li>
-  <li><a href="#">MY PROJECTS <i class="fa fa-hand-o-right"></i></a></li>
+  <li><a href="#"> | </i></a></li>
 </ul>
 </div>
 
