--- a/public/css/index.css
+++ b/public/css/index.css
@@ -126,6 +126,14 @@ select {
 #footer ul li:nth-child(2) {float: left}
 #footer ul li:nth-child(3) {float: left}
 
+/*#footer ul li:nth-child(11) ,
+#footer ul li:nth-child(12) ,
+#footer ul li:nth-child(13) ,
+#footer ul li:nth-child(14) ,
+#footer ul li:nth-child(15) ,
+#footer ul li:nth-child(16) {background-color: #1a3950}*/
+
+
 #footer li a {
     display: block;
     color: white;
