--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,5 @@
+<title>SHUBHAM RESUME SELECTOR</title>
+<link rel="icon" href="../images/pace.jpg">
 <link rel="stylesheet" type="text/css" href="/css/index.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
