--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,11 +6,12 @@
 <script src="/js/index.js"></script> 
 <div id="signature">
 <h2>DEVELOPER INFO: </h2>
-<p>Name: Shubham Yeole</p>
-<p>Title: Full Stack Developer</p>
-<p>Status: Seeking full time opportunity</p>
-<p>Phone: +1 (201) 887-5323</p>
-<p>Email: shubhamyeole.cs@gmail.com</p>
+<span>Name: Shubham Yeole<br>
+Title: Full Stack Developer<br>
+Status: Seeking full time opportunity<br>
+Phone: +1 (201) 887-5323<br>
+Email: shubhamyeole.cs@gmail.com<br>
+</span>
 </div>
 <div id="footer" class="header">
 <% include headerfooter.html %>
