--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,6 +15,8 @@ Email: shubhamyeole.cs@gmail.com<br>
 </div>
 <div id="footer" class="header">
 <% include headerfooter.html %>
+<% include header.ejs %>
+
 </div>
 
 
