Update Project List and GPS functionality

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -61,7 +61,7 @@
 <div class="dropdown dropdown1 right">
   <button class="dropbtn">My other Live Projects</button>
   <div class="dropdown-content">
-    <a href="http://mediabuzznet.herokuapp.com" target="_blank">Media Buzz Net</a>
+    <a href="http://mediabuzznet.herokuapp.com" target="_blank">Media Buzz Net Website..</a>
     <a href="https://java-nodejs-blog.herokuapp.com" target="_blank">Java & Nodejs Blog</a>
     <a href="http://shubham-great-livings.herokuapp.com/timetable" target="_blank">Task Tracker</a>
     <a href="http://shubham-great-livings.herokuapp.com" target="_blank">Shubham Great Living (Real Estates)</a>
