Update Project List and GPS functionality

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -63,7 +63,7 @@
   <div class="dropdown-content">
     <a href="http://mediabuzznet.herokuapp.com" target="_blank">Media Buzz Net Website..</a>
     <a href="https://java-nodejs-blog.herokuapp.com" target="_blank">Java & Nodejs Blog</a>
-    <a href="http://shubham-great-livings.herokuapp.com" target="_blank">Shubham Great Living (Real Estates)</a>
+    <a href="http://shubham-great-livings.herokuapp.com" target="_blank">Shubham Great Living</a>
     <a href="http://shubham-great-livings.herokuapp.com/timetable" target="_blank">Task Tracker</a>
     <a href="http://visitorsgooglemap.herokuapp.com" target="_blank">Visitors Google Map</a>
     <a href="https://shubhamtwilio.herokuapp.com" target="_blank">Twilio SMS Service</a>
